Update in header.html file menu added

--- a/header.html
+++ b/header.html
@@ -1,1 +1,11 @@
-header menu added
+<div>
+    <nav>
+        <ul>
+            <li>nav link</li>
+            <li>nav link</li>
+            <li>nav link</li>
+            <li>nav link</li>
+            <li>nav link</li>
+        </ul>
+    </nav>
+</div>
