--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
             <li>nav link</li>
             <li>nav link</li>
             <li>nav link</li>
-            <li>nav link</li>
+            <li>Contact Us</li>
         </ul>
     </nav>
 </div>
