Add login/register links

--- a/header.html
+++ b/header.html
@@ -4,8 +4,8 @@
             <li>nav link</li>
             <li>nav link</li>
             <li>nav link</li>
-            <li>nav link</li>
-            <li>nav link</li>
+            <li>Login</li>
+            <li>Register</li>
         </ul>
     </nav>
 </div>
